# US-Foundation

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  EXPERIMENT_RESULTS.md  FIXES.md  LICENSE  METHOD_CHANGES.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  submission_fold0_intermediate.json
configs/: abl_ep20_fullft.yaml  abl_ep20_sampletemp0.yaml  abl_ep20_simplehead.yaml  abl_ep20_simplehead_ml.yaml  abl_ep20_singleneck.yaml  abl_ep20_upgraded.yaml  abl_nossl.yaml  phase1_dinov2.yaml  phase1_dinov2_fullres.yaml  phase1_multicrop.yaml  phase2_baseline.yaml  phase2_baseline_ssl.yaml  phase2_upgraded.yaml  predict_ensemble.yaml  probe_phase1.yaml  submit_val.yaml
configs/experiments/: exp_measurement_aux.yaml  exp_median_ensemble.yaml  exp_sample_temp.yaml  exp_strong_aug.yaml  exp_wing_loss.yaml
data/: README.md
data/splits/: train_val_split_keys.json
docs/: ARCHITECTURE.md
docs/fixes/: 5fold_tta_ensemble_notes.md  figure1_pipeline_corrected.md  scores.txt
docs/latex_template/: fig1_feature_maps_transposed.eps  fig_best_per_task_row.eps  main.tex  mybibliography.bib  pipeline_diagram.drawio
gubiometry/: __init__.py  __main__.py  config.py  constants.py  geometry.py  losses.py  metrics.py  optim.py
gubiometry/data/: __init__.py  dataset.py  multicrop.py  samplers.py  splits.py  transforms.py
gubiometry/engine/: __init__.py  common.py  evaluate.py  kfold.py  phase1.py  phase1_dinov2.py  phase2.py  predict.py
pretrained/: README.md
scripts/: run_kfold_hrnet.sh  run_phase1.sh  run_phase1_dinov2.sh  run_phase1_multicrop.sh  run_phase2_hrnet.sh
(+16 files in other folders)
